--- a/src/assets/css/detalle.css
+++ b/src/assets/css/detalle.css
@@ -1,12 +1,55 @@
 section#detalle .producto {
-	width: 600px;
-	margin: 0 auto;
+	width: 80%;
+	margin: 40px auto 0;
 }
 section#detalle .producto > * {
 	text-align: center;
 	margin: 0 auto;
 	display: block;
 }
-section#detalle .producto > img {
-	width: 400px;
+section#detalle .producto > div {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+section#detalle .producto > div > .imagen > img {
+	width: 300px;
+}
+section#detalle .producto > div > .resto {
+	padding-left: 40px;
+	display: flex;
+	flex-direction: column;
+	align-content: flex-start;
+	align-items: flex-start;
+}
+section#detalle .producto > div > .resto > h4 {
+	font-family: Recoleta Regular;
+	text-align: left;
+	font-size: 3em;
+	font-weight: 400;
+	margin: 0;
+	
+	
+	
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+}
+section#detalle .producto > div > .resto > p.precio {
+	font-size: 1.8em;
+	margin: 20px 0;
+	text-align: left;
+	font-weight: 400;
+	margin-bottom: 0;
+	color: #ff0000ad;
+}
+section#detalle .producto > div > .resto > p.descripcion {
+	text-align: left;
+}
+section#detalle .producto > div > .resto > .pill {
+	margin-bottom: 20px;
+	text-decoration: none;
+	cursor: pointer;
 }
