--- a/src/assets/css/BarraImportantes.css
+++ b/src/assets/css/BarraImportantes.css
@@ -44,6 +44,7 @@ section#barraimportantes > ul > li > div.desplegado {
 	width: 300px;
 	height: 100px;
 	position: absolute;
+	z-index: 1;
 	top: 34px;
 	right: 0;
 	box-shadow: 2px 7px 20px -16px black;
