--- a/src/assets/css/WishList.css
+++ b/src/assets/css/WishList.css
@@ -1,3 +1,6 @@
+#detalle section#wishlist {
+	right: -60px;
+}
 section#wishlist {
 	position: absolute;
 	right: 0;
@@ -5,7 +8,7 @@ section#wishlist {
 section#wishlist > span.wishlist {
 	cursor: pointer;
 }
-section#wishlist > span.wishlist.megusta ,
+section#wishlist > span.wishlist.simegusta ,
 section#wishlist > span.wishlist:hover {
 	font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 48;
 	color: #e7646a;
