--- a/src/assets/css/BarraImportantes.css
+++ b/src/assets/css/BarraImportantes.css
@@ -82,4 +82,38 @@ section#barraimportantes > ul > li > div.desplegado.micuenta > div > p {
 section#barraimportantes > ul > li > div.desplegado.micuenta > div > p > a {
 	color: #e7646a;
 }
+section#barraimportantes > ul > li > div.desplegado.favoritos {
+	height: auto;
+}
+section#barraimportantes > ul > li > div.desplegado.favoritos .favorito {
+	padding: 10px 15px 0;
+	margin: 0;
+	border-bottom: 1px dashed #ddd;
+}
+	section#barraimportantes > ul > li > div.desplegado.favoritos .favorito:hover {
+		opacity: .7;
+	}
+section#barraimportantes > ul > li > div.desplegado.favoritos .favorito > a {
+	text-decoration: none;
+	color: black;
+	display: flex;
+	padding: 10px 0;
+}
+section#barraimportantes > ul > li > div.desplegado.favoritos .favorito > a > .imagen {
+	display: flex;
+	align-items: center;
+}
+section#barraimportantes > ul > li > div.desplegado.favoritos .favorito > a > .imagen img {
+	max-width: 60px;
+	margin-right: 20px;
+}
+section#barraimportantes > ul > li > div.desplegado.favoritos .favorito > a > .resto .titulo {
+	padding: 0 14px 0 0;
+	margin: 0;
+	line-height: 1.2em;
+}
+section#barraimportantes > ul > li > div.desplegado.favoritos .favorito > a > .resto .precio {
+	margin: 10px 0 0 0;
+	font-weight: 600;
+}
 
