--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -2,34 +2,9 @@ header {
 	display: flex;
 	justify-content: space-between;
 	padding: 0 20px;
+	min-height: 60px;
 }
 header .logo {
 	margin-top: 10px;
 	
-}
-nav {}
-nav > ul {
-	margin: 0;
-	padding: 0;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	align-items: center;
-	justify-content: flex-end;
-	height: 100%;
-}
-nav > ul > li {
-	list-style: none;
-	margin: 0 0 0 12%;
-	padding: 0;
-}
-nav > ul > li > a {
-	color: black;
-	text-decoration: none;
-}
-nav > ul > li > a:hover {
-	border-bottom: 2px solid #ccc;
-}
-nav > ul > li > a.tamoActivo {
-	border-bottom: 2px solid black;
 }
