--- a/src/assets/css/producto.css
+++ b/src/assets/css/producto.css
@@ -55,3 +55,10 @@
 	display: flex;
 	justify-content: center;
 }
+
+@media ( max-width: 768px ) {
+	.producto {
+		width: 44%;
+		margin: 1% 3% 0;
+	}
+}
