--- a/src/assets/css/Nav.css
+++ b/src/assets/css/Nav.css
@@ -1,3 +1,14 @@
+.sombraMenu {
+	background: black;
+	opacity: .8;
+	width: 100%;
+	height: 100%;
+	display: block;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1;
+}
 .menuMobile {
 	display: none;
 }
@@ -41,7 +52,7 @@ nav > ul > li > a.tamoActivo {
 	}
 	.menuMobile.desplegado {
 		position: absolute;
-		z-index: 2;
+		z-index: 3;
 		top: 10px;
 		right: 10px;
 	}
@@ -72,9 +83,9 @@ nav > ul > li > a.tamoActivo {
 	}
 	nav.desplegado {
 		display: block;
-		background: red;
+		background: white;
 		position: absolute;
-		z-index: 1;
+		z-index: 2;
 		top: 0;
 		right: 0;
 		width: 70%;
@@ -86,5 +97,27 @@ nav > ul > li > a.tamoActivo {
 		margin-top: 0;
 		padding-top: 0;
 		justify-content: space-evenly;
+	}
+	nav.desplegado > ul > li {
+		width: 100%;
+		text-align: center;
+		border-bottom: 1px solid #ccc;
+		padding: 10px 0;
+		margin: 0;
+		text-transform: uppercase;
+	}
+	nav.desplegado > ul > li:last-of-type {
+		border-bottom: none;
+	}
+	nav.desplegado > ul > li > a {
+		font-size: 2.3em;
+		line-height: 3em;
+		width: 100%;
+		height: 100%;
+		display: block;
+	}
+	nav.desplegado > ul > li > a.tamoActivo {
+		border: none;
+		font-weight: bold;
 	}
 }
